@@ -24,8 +24,6 @@ Version 1.5.0:
 * Remove byte-swapping functions from user space.
 * EoE:
     - Only execute one EoE handler per cycle.
-    - Replace locking callbacks.
-    - Allow EoE with userspace application.
 * Implement 'ethercat foe_read --output-file ...'.
 * Fix unloading problem of ec_e100 driver.
 * Use ec_datagram_zero() where possible.
@@ -41,7 +39,6 @@ Version 1.5.0:
 * Remove ecrt_domain_state()?
 * Check force_config flag before error.
 * Remove allow_scanning flag.
-* Implement ecrt_master_slave() in kernel space.
 * Check for ioctl() interface version.
 * Improve application-triggered SDO transfers by moving the state machine into
   the SDO handlers.
